Auto-commit: 2026-01-01 23:21:06